TFG v2.1-CLEANUP: Eliminación archivos obsoletos y mejora .gitignore
-  Eliminado tag_replay_4anchors_opt.py (ya no se usa)
-  Eliminados archivos __pycache__/ (no deben versionarse)
-  Mejorado .gitignore con reglas Python completas
-  Repositorio limpio y optimizado para TFG

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,20 @@ secrets.h
 *.credentials
 *.env.local
 
+# ===== PYTHON =====
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
 # ===== PLATFORMIO =====
 .pio/
 .vscode/
