--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,11 @@ bokeh>=2.4.0
 # Optional: For performance monitoring
 psutil>=5.9.0
 
+# WordPress integration and web automation
+requests>=2.28.0
+watchdog>=2.1.0
+base64>=0.1.0
+
 # Development and testing (optional)
 pytest>=7.0.0
 black>=22.0.0
