Optimización completa del Sistema UWB para TFG
 MEJORAS PRINCIPALES:
- Sistema de Replay UWB completamente optimizado y robusto
- Filtros Kalman + ML con predicción GPR para análisis deportivo
- GUI interactiva con controles 0.1x-10x velocidad
- Sincronización perfecta slider-teclado sin callbacks recursivos
- Cálculo eficiente O(1) de distancias acumulativas
- Validaciones robustas contra división por cero y datos incompletos

 NUEVAS FUNCIONALIDADES:
- Análisis comparativo de filtros con recomendaciones automáticas
- Generador de datos realistas de fútbol sala
- Procesador 3D de trayectorias con visualización avanzada
- Configuración indoor especializada para placas DW3000
- WordPress plugin para integración web

 RESULTADOS Y ANÁLISIS:
- Capturas de pantalla del replay mejorado
- Análisis de movimiento natural vs suavizado
- Comparaciones de rendimiento entre filtros
- Reportes JSON con métricas detalladas

 OPTIMIZACIONES TÉCNICAS:
- Imports optimizados sin duplicados
- Eliminación de variables no usadas
- Frecuencias reales calculadas dinámicamente
- Extrapolación adaptativa a la frecuencia de muestreo
- Mensajes de error informativos con debugging

 DOCUMENTACIÓN:
- Memoria técnica completa del TFG
- Análisis de alternativas avanzadas
- Resumen ejecutivo de filtros implementados
- Configuración pyproject.toml para desarrollo

 ESTADO: Listo para uso en producción con placas Makerfabs ESP32 UWB DW3000

--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,9 @@ bokeh>=2.4.0
 # Optional: For performance monitoring
 psutil>=5.9.0
 
+# 🚀 OPTIMIZACIÓN CRÍTICA: JIT compilation (10-100x más rápido)
+numba>=0.56.0
+
 # WordPress integration and web automation
 requests>=2.28.0
 watchdog>=2.1.0
