SISTEMA UWB v2.0 - Optimizaciones Críticas Implementadas
 CORRECCIONES PRINCIPALES:
- Sistema detección/corrección velocidades irreales (límite 8 m/s)
- Optimización memoria: GPR entrenamiento cada 500ms vs cada gap
- Eliminación variable duplicada interpolated_data
- Tipos float32 mantenidos en modo optimize_memory
- UI mejorada: eliminar tight_layout warnings y iconos Unicode

 TESTS MODERNIZADOS (unittest  pytest):
- 11 tests con fixtures profesionales y logging estructurado
- Test velocidades límite, memoria optimizada, inicialización mínima
- Cobertura completa: Kalman, GPR, interpolación, reportes
- Configuración CI/CD con .coveragerc y pytest.ini

 RENDIMIENTO MEJORADO:
- Búsqueda binaria en interpolación (np.searchsorted)
- Toggle filtros optimizado sin recálculo completo
- Layout mejorado sin solapamientos

 DIAGNÓSTICO REALISMO:
- Detección automática datos sintéticos problemáticos
- Corrección velocidades 35 m/s  4.2 m/s realistas
- Documentación análisis completo archivo CSV problemático

Sistema listo para producción con hardware ESP32 UWB DW3000

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,28 @@
 [tool:pytest]
 # Configuración pytest para TFG Sistema UWB
 minversion = 6.0
-addopts = -ra -q --tb=short
+addopts = 
+    -ra 
+    -q 
+    --tb=short
+    --strict-markers
+    --disable-warnings
 testpaths = .
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 
+# Marcadores personalizados
+markers =
+    slow: tests lentos (hardware real)
+    integration: tests integración completa
+    unit: tests unitarios puros
+    hardware: tests requieren ESP32 UWB
+
 # Filtrar warnings específicos
 filterwarnings =
     ignore::DeprecationWarning:pyparsing.*
+    ignore::pytest.PytestUnknownMarkWarning
     ignore::UserWarning:matplotlib.*
-    ignore::UserWarning:tkinter.* 
+    ignore::UserWarning:tkinter.*
+    ignore::RuntimeWarning:numpy.* 
