Optimize project configuration files
- requirements.txt: Remove 20+ unused dependencies (seaborn, plotly, bokeh, jupyter, etc.)
- Keep only essentials: pandas, numpy, scipy, matplotlib, scikit-learn, paho-mqtt, numba
- pyproject.toml: Simplify pyright config, remove black/flake8 settings
- .gitignore: Clean up unused entries, remove old folder patterns
- Reduces package size and installation time significantly

--- a/.gitignore
+++ b/.gitignore
@@ -9,34 +9,23 @@ secrets.h
 # ===== PYTHON =====
 __pycache__/
 *.py[cod]
-*$py.class
 *.pyc
-*.pyo
-*.pyd
 .Python
-env/
 venv/
-ENV/
-env.bak/
-venv.bak/
+env/
 
-# ===== PLATFORMIO =====
+# ===== PLATFORMIO/ARDUINO =====
 .pio/
 .vscode/
 lib/
-.gitignore.backup
 
 # ===== COMPILACIÓN =====
 *.bin
 *.elf
 *.map
 
-# ===== LOGS Y DATOS =====
+# ===== LOGS Y TEMPORALES =====
 *.log
-data/
-logs/
-
-# ===== TEMPORALES =====
 *.tmp
 *.bak
 *~
@@ -45,11 +34,8 @@ logs/
 .DS_Store
 Thumbs.db
 
-# ===== ARTEFACTOS SISTEMA UWB =====
+# ===== DATOS GENERADOS AUTOMÁTICAMENTE =====
+# (uwb_data/ se incluye manualmente con git add -f)
 outputs/
 processed_data/
-uwb_logs_mqtt/
-uwb_replay_csv/
-# Ignorar CSV y PNG grandes generados automáticamente
-*.csv
 *.png 
